--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         }
     </style>
 </head>
+<meta charset="UTF-8">
 <body>
 
 <script type="text/javascript">
@@ -17,15 +18,18 @@ var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create
 function preload() {
     //game.load.image('sky', 'assets/background.gif');
     game.load.image('ground', '01/asset/paddleBlu.png');
-    game.load.image('mouse', '01/asset/ballGrey.png');
+    game.load.image('ball', '01/asset/ballGrey.png');
     //game.load.spritesheet('rick', 'assets/rick-sprite.png', 76, 44, 5);
 }
+
 var platforms;
+var ball;
+var ballx,bally=100;
 function create() {
     //  We're going to be using physics, so enable the Arcade Physics system
     game.physics.startSystem(Phaser.Physics.ARCADE);
     //  A simple background for our game
-    //game.add.sprite(0, 0, 'sky');
+    //game.add.sprmouseite(0, 0, 'sky');
     //  The platforms group contains the ground and the 2 ledges we can jump on
     platforms = game.add.group();
     //  We will enable physics for any object that is created in this group
@@ -42,8 +46,22 @@ function create() {
     ledge = platforms.create(-150, 250, 'ground');
     ledge.body.immovable = true;
 
+    ball = game.add.sprite(100,100,'ball');
+    ballx,bally = 100;
 }
 function update() {
+    /*
+    if(game.input.keyboard.isDown(Phaser.Keyboard.LEFT))
+    {
+      ballx-=1;
+    } 
+    else if(game.input.keyboard.isDown(Phaser.Keyboard.RIGHT)){
+      ballx+=1;
+    } 
+    */
+      ball.x = ballx;
+      ball.y = bally;
+     
 }
 </script>
 
