--- a/01/index.html
+++ b/01/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" href="css/main.css">
+	<!--<link rel="stylesheet" href="css/main.css"> -->
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser-ce@2.8.0/build/phaser.js"></script>
 	<meta charset="UTF-8">
-	<script src="js/game.js"></script>
+	<script src="game.js"></script>
 	<title>Game</title>
 </head>
 <body>
-	<div id="gameDiv"> </div>
+	<div id="game"> </div>
 
 </body>
 </html>
